# flag

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.md  README.md  main.cpp
.github/workflows/: c-cpp.yml
examples/: CMakeLists.txt  file_permission.cpp
include/: CMakeLists.txt
include/river/: flag.hpp
src/: CMakeLists.txt  flag.hpp
tests/: CMakeLists.txt  main.cpp
